--- a/Pharmacy/Pharmacy.PresentationLayer/Views/Prescription/Details.cshtml
+++ b/Pharmacy/Pharmacy.PresentationLayer/Views/Prescription/Details.cshtml
@@ -1,48 +1,58 @@
-﻿@model Pharmacy.PresentationLayer.Models.PrescriptionDetailsVIewModel
+﻿@model PrescriptionDetailsVIewModel
 
 @{
-    ViewData["Title"] = "Details";
+  ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<div class="row">
+  @if (Model.PreviousPrescriptionId.HasValue)
+  {
+    <a asp-action="Details" asp-route-id="@Model.PreviousPrescriptionId.Value">Previous</a>
+  }
+  <h1>Details</h1>
+  @if (Model.NextPrescriptionId.HasValue)
+  {
+    <a asp-action="Details" asp-route-id="@Model.NextPrescriptionId.Value">Next</a>
+  }
+</div>
 
 <div>
-    <h4>PrescriptionDetailsVIewModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Buyer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Buyer)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SaleTime)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SaleTime)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NextPrescriptionId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NextPrescriptionId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PreviousPrescriptionId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PreviousPrescriptionId)
-        </dd>
-    </dl>
+  <hr/>
+  <dl class="row">
+    <dt class="col-sm-2">
+      @Html.DisplayNameFor(model => model.Id)
+    </dt>
+    <dd class="col-sm-10">
+      @Html.DisplayFor(model => model.Id)
+    </dd>
+    <dt class="col-sm-2">
+      @Html.DisplayNameFor(model => model.Buyer)
+    </dt>
+    <dd class="col-sm-10">
+      @Html.DisplayFor(model => model.Buyer)
+    </dd>
+    <dt class="col-sm-2">
+      @Html.DisplayNameFor(model => model.SaleTime)
+    </dt>
+    <dd class="col-sm-10">
+      @Html.DisplayFor(model => model.SaleTime)
+    </dd>
+  </dl>
+  <dl class="row">
+    <dt class="col-sm-2">
+      @Html.DisplayNameFor(model => model.Medicine)
+    </dt>
+    @foreach (var medicine in Model.Medicine)
+    {
+      <dd class="col-sm-10">
+        @medicine.Name : @medicine.Amount
+      </dd>
+    }
+  </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.Id }) |
-    <a asp-action="Index">Back to List</a>
+  @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+  @Html.ActionLink("Create", "Create") |
+  <a asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
 </div>
+
